Required functionality added like embedding function, existing db, split_documents, create_vector_store, and so on..

--- a/documentation.ipynb
+++ b/documentation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -79,6 +79,127 @@
     "\n",
     "# Display to confirm successful import\n",
     "print(\"Dependencies imported successfully.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Config vaiables and required functions loaded\n"
+     ]
+    }
+   ],
+   "source": [
+    "COHERE_API_KEY='JPZrN72mRP2r9W5Dedo3Zk18VUS8voCHIPD7WLly'\n",
+    "MISTRAL_API_KEY='aCp49AkZAXNhTUgFziRT3Q8uO0GgWjBj'\n",
+    "MILVUS_URI = \"milvus/milvus_vector.db\"\n",
+    "MODEL_NAME = \"sentence-transformers/all-MiniLM-L6-v2\"\n",
+    "\n",
+    "def vector_store_check(uri):\n",
+    "    # Create the directory if it does not exist\n",
+    "    head = os.path.split(uri)\n",
+    "    os.makedirs(head[0], exist_ok=True)\n",
+    "    \n",
+    "    # Connect to the Milvus database\n",
+    "    connections.connect(\"default\",uri=uri)\n",
+    "\n",
+    "    # Return True if exists, False otherwise\n",
+    "    return utility.has_collection(\"IT_support\")\n",
+    "\n",
+    "def get_embedding_function():\n",
+    "    \"\"\"\n",
+    "    returns embedding function for the model\n",
+    "\n",
+    "    Returns:\n",
+    "        embedding function\n",
+    "    \"\"\"\n",
+    "    embedding_function = HuggingFaceEmbeddings(model_name=MODEL_NAME)\n",
+    "    return embedding_function\n",
+    "\n",
+    "def load_documents_from_web():\n",
+    "    \"\"\"\n",
+    "    Load the documents from the web and store the page contents\n",
+    "\n",
+    "    Returns:\n",
+    "        list: The documents loaded from the web\n",
+    "    \"\"\"\n",
+    "    loader = RecursiveUrlLoader(\n",
+    "        url=CORPUS_SOURCE,\n",
+    "        prevent_outside=True,\n",
+    "        base_url=CORPUS_SOURCE\n",
+    "        )\n",
+    "    documents = loader.load()\n",
+    "    \n",
+    "    return documents\n",
+    "\n",
+    "def load_existing_db(uri=MILVUS_URI):\n",
+    "    \"\"\"\n",
+    "    Load an existing vector store from the local Milvus database specified by the URI.\n",
+    "\n",
+    "    Args:\n",
+    "        uri (str, optional): Path to the local milvus db. Defaults to MILVUS_URI.\n",
+    "\n",
+    "    Returns:\n",
+    "        vector_store: The vector store created\n",
+    "    \"\"\"\n",
+    "    # Load an existing vector store\n",
+    "    vector_store = Milvus(\n",
+    "        collection_name=\"IT_support\",\n",
+    "        embedding_function = get_embedding_function(),\n",
+    "        connection_args={\"uri\": uri},\n",
+    "    )\n",
+    "    print(\"Vector Store Loaded\")\n",
+    "    return vector_store\n",
+    "\n",
+    "def split_documents(documents):\n",
+    "    \"\"\"\n",
+    "    Split the documents into chunks\n",
+    "\n",
+    "    Args:\n",
+    "        documents (list): The documents to split\n",
+    "\n",
+    "    Returns:\n",
+    "        list: list of chunks of documents\n",
+    "    \"\"\"\n",
+    "    # Create a text splitter to split the documents into chunks\n",
+    "    text_splitter = RecursiveCharacterTextSplitter(\n",
+    "        chunk_size=1000,  # Split the text into chunks of 1000 characters\n",
+    "        chunk_overlap=300,  # Overlap the chunks by 300 characters\n",
+    "        is_separator_regex=False,  # Don't split on regex\n",
+    "    )\n",
+    "    # Split the documents into chunks\n",
+    "    docs = text_splitter.split_documents(documents)\n",
+    "    return docs\n",
+    "\n",
+    "def create_vector_store(docs, embeddings, uri):\n",
+    "    \"\"\"\n",
+    "    This function initializes a vector store using the provided documents and embeddings.\n",
+    "\n",
+    "    Args:\n",
+    "        docs (list): A list of documents to be stored in the vector store.\n",
+    "        embeddings : A function or model that generates embeddings for the documents.\n",
+    "        uri (str): Path to the local milvus db\n",
+    "\n",
+    "    Returns:\n",
+    "        vector_store: The vector store created\n",
+    "    \"\"\"\n",
+    "    # Create a new vector store and drop any existing one\n",
+    "    vector_store = Milvus.from_documents(\n",
+    "        documents=docs,\n",
+    "        embedding=embeddings,\n",
+    "        collection_name=\"IT_support\",\n",
+    "        connection_args={\"uri\": uri},\n",
+    "        drop_old=True,\n",
+    "    )\n",
+    "    print(\"Vector Store Created\")\n",
+    "    return vector_store\n",
+    "\n",
+    "print(\"Config vaiables and required functions loaded\")"
    ]
   },
   {
