milvus initialization and prompt added to the logic

--- a/documentation.ipynb
+++ b/documentation.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -200,6 +200,109 @@
     "    return vector_store\n",
     "\n",
     "print(\"Config vaiables and required functions loaded\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'milvus_lite'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[81], line 28\u001b[0m\n\u001b[0;32m     24\u001b[0m         vector_store \u001b[38;5;241m=\u001b[39m create_vector_store(docs, embeddings, uri)\n\u001b[0;32m     26\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m vector_store\n\u001b[1;32m---> 28\u001b[0m \u001b[43minitialize_milvus\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[81], line 11\u001b[0m, in \u001b[0;36minitialize_milvus\u001b[1;34m(uri)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21minitialize_milvus\u001b[39m(uri: \u001b[38;5;28mstr\u001b[39m\u001b[38;5;241m=\u001b[39mMILVUS_URI):\n\u001b[0;32m      2\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;124;03m    Initialize the vector store for the RAG model\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;124;03m        vector_store: The vector store created\u001b[39;00m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m---> 11\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mvector_store_check\u001b[49m\u001b[43m(\u001b[49m\u001b[43muri\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[0;32m     12\u001b[0m         vector_store \u001b[38;5;241m=\u001b[39m load_existing_db(uri)\n\u001b[0;32m     13\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "Cell \u001b[1;32mIn[80], line 12\u001b[0m, in \u001b[0;36mvector_store_check\u001b[1;34m(uri)\u001b[0m\n\u001b[0;32m      9\u001b[0m os\u001b[38;5;241m.\u001b[39mmakedirs(head[\u001b[38;5;241m0\u001b[39m], exist_ok\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m# Connect to the Milvus database\u001b[39;00m\n\u001b[1;32m---> 12\u001b[0m \u001b[43mconnections\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconnect\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdefault\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43muri\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43muri\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;66;03m# Return True if exists, False otherwise\u001b[39;00m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m utility\u001b[38;5;241m.\u001b[39mhas_collection(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIT_support\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[1;32mc:\\program files\\python38\\lib\\site-packages\\pymilvus\\orm\\connections.py:379\u001b[0m, in \u001b[0;36mConnections.connect\u001b[1;34m(self, alias, user, password, db_name, token, **kwargs)\u001b[0m\n\u001b[0;32m    374\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m parent_path\u001b[38;5;241m.\u001b[39mis_dir():\n\u001b[0;32m    375\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m ConnectionConfigException(\n\u001b[0;32m    376\u001b[0m         message\u001b[38;5;241m=\u001b[39m\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOpen local milvus failed, dir: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mparent_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is not exists\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    377\u001b[0m     )\n\u001b[1;32m--> 379\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmilvus_lite\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mserver_manager\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m server_manager_instance\n\u001b[0;32m    381\u001b[0m logger\u001b[38;5;241m.\u001b[39minfo(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPass in the local path \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkwargs[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124muri\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, and run it using milvus-lite\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    382\u001b[0m local_uri \u001b[38;5;241m=\u001b[39m server_manager_instance\u001b[38;5;241m.\u001b[39mstart_and_get_uri(kwargs[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124muri\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'milvus_lite'"
+     ]
+    }
+   ],
+   "source": [
+    "def initialize_milvus(uri: str=MILVUS_URI):\n",
+    "    \"\"\"\n",
+    "    Initialize the vector store for the RAG model\n",
+    "\n",
+    "    Args:\n",
+    "        uri (str, optional): Path to the local milvus db. Defaults to MILVUS_URI.\n",
+    "\n",
+    "    Returns:\n",
+    "        vector_store: The vector store created\n",
+    "    \"\"\"\n",
+    "    if vector_store_check(uri):\n",
+    "        vector_store = load_existing_db(uri)\n",
+    "    else:\n",
+    "        embeddings = get_embedding_function()\n",
+    "        print(\"Embeddings Loaded\")\n",
+    "        documents = load_documents_from_web()\n",
+    "        print(\"Documents Loaded\")\n",
+    "        print(len(documents))\n",
+    "    \n",
+    "        # Split the documents into chunks\n",
+    "        docs = split_documents(documents=documents)\n",
+    "        print(\"Documents Splitting completed\")\n",
+    "    \n",
+    "        vector_store = create_vector_store(docs, embeddings, uri)\n",
+    "\n",
+    "    return vector_store\n",
+    "\n",
+    "initialize_milvus()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prompt Created\n",
+      "input_variables=['context', 'input'] template=\"\\n    Human: You are an AI assistant, and provides answers to questions by using fact based and statistical information when possible.\\n    Use the following pieces of information to provide a concise answer to the question enclosed in <question> tags.\\n    Only use the information provided in the <context> tags.\\n    If you don't know the answer, just say that you don't know, don't try to make up an answer.\\n    <context>\\n    {context}\\n    </context>\\n\\n    <question>\\n    {input}\\n    </question>\\n\\n    The response should be specific and use statistics or numbers when possible.\\n\\n    Assistant:\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "def create_prompt():\n",
+    "    \"\"\"\n",
+    "    Create a prompt template for the RAG model\n",
+    "\n",
+    "    Returns:\n",
+    "        PromptTemplate: The prompt template for the RAG model\n",
+    "    \"\"\"\n",
+    "    # Define the prompt template\n",
+    "    PROMPT_TEMPLATE = \"\"\"\n",
+    "    Human: You are an AI assistant, and provides answers to questions by using fact based and statistical information when possible.\n",
+    "    Use the following pieces of information to provide a concise answer to the question enclosed in <question> tags.\n",
+    "    Only use the information provided in the <context> tags.\n",
+    "    If you don't know the answer, just say that you don't know, don't try to make up an answer.\n",
+    "    <context>\n",
+    "    {context}\n",
+    "    </context>\n",
+    "\n",
+    "    <question>\n",
+    "    {input}\n",
+    "    </question>\n",
+    "\n",
+    "    The response should be specific and use statistics or numbers when possible.\n",
+    "\n",
+    "    Assistant:\"\"\"\n",
+    "\n",
+    "    # Create a PromptTemplate instance with the defined template and input variables\n",
+    "    prompt = PromptTemplate(\n",
+    "        template=PROMPT_TEMPLATE, input_variables=[\"context\", \"question\"]\n",
+    "    )\n",
+    "    print(\"Prompt Created\")\n",
+    "\n",
+    "    # Return the created prompt template to be used with the RAG model\n",
+    "    return prompt\n",
+    "\n",
+    "print(create_prompt())"
    ]
   },
   {
