Response functionality added using milvus database

--- a/documentation.ipynb
+++ b/documentation.ipynb
@@ -307,6 +307,101 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Loaded\n",
+      "Prompt Created\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'milvus_lite'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[83], line 60\u001b[0m\n\u001b[0;32m     56\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mResponse Generated:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     58\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m response[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124manswer\u001b[39m\u001b[38;5;124m\"\u001b[39m], sources\n\u001b[1;32m---> 60\u001b[0m response, sources \u001b[38;5;241m=\u001b[39m \u001b[43mquery_rag\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mhow to connect wifi\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     61\u001b[0m \u001b[38;5;28mprint\u001b[39m(response)\n\u001b[0;32m     62\u001b[0m \u001b[38;5;28mprint\u001b[39m(sources)\n",
+      "Cell \u001b[1;32mIn[83], line 21\u001b[0m, in \u001b[0;36mquery_rag\u001b[1;34m(query)\u001b[0m\n\u001b[0;32m     18\u001b[0m prompt \u001b[38;5;241m=\u001b[39m create_prompt()\n\u001b[0;32m     20\u001b[0m \u001b[38;5;66;03m# Load the vector store and create the retriever\u001b[39;00m\n\u001b[1;32m---> 21\u001b[0m vector_store \u001b[38;5;241m=\u001b[39m \u001b[43mload_existing_db\u001b[49m\u001b[43m(\u001b[49m\u001b[43muri\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mMILVUS_URI\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     22\u001b[0m retriever \u001b[38;5;241m=\u001b[39m vector_store\u001b[38;5;241m.\u001b[39mas_retriever()\n\u001b[0;32m     23\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n",
+      "Cell \u001b[1;32mIn[80], line 54\u001b[0m, in \u001b[0;36mload_existing_db\u001b[1;34m(uri)\u001b[0m\n\u001b[0;32m     44\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     45\u001b[0m \u001b[38;5;124;03mLoad an existing vector store from the local Milvus database specified by the URI.\u001b[39;00m\n\u001b[0;32m     46\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     51\u001b[0m \u001b[38;5;124;03m    vector_store: The vector store created\u001b[39;00m\n\u001b[0;32m     52\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     53\u001b[0m \u001b[38;5;66;03m# Load an existing vector store\u001b[39;00m\n\u001b[1;32m---> 54\u001b[0m vector_store \u001b[38;5;241m=\u001b[39m \u001b[43mMilvus\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m     55\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcollection_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mIT_support\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m     56\u001b[0m \u001b[43m    \u001b[49m\u001b[43membedding_function\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mget_embedding_function\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     57\u001b[0m \u001b[43m    \u001b[49m\u001b[43mconnection_args\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m{\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43muri\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43muri\u001b[49m\u001b[43m}\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     58\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     59\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mVector Store Loaded\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     60\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m vector_store\n",
+      "File \u001b[1;32mc:\\program files\\python38\\lib\\site-packages\\langchain_milvus\\vectorstores\\milvus.py:326\u001b[0m, in \u001b[0;36mMilvus.__init__\u001b[1;34m(self, embedding_function, collection_name, collection_description, collection_properties, connection_args, consistency_level, index_params, search_params, drop_old, auto_id, primary_field, text_field, vector_field, enable_dynamic_field, metadata_field, partition_key_field, partition_names, replica_number, timeout, num_shards, metadata_schema)\u001b[0m\n\u001b[0;32m    324\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m connection_args \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    325\u001b[0m     connection_args \u001b[38;5;241m=\u001b[39m DEFAULT_MILVUS_CONNECTION\n\u001b[1;32m--> 326\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39malias \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_create_connection_alias\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconnection_args\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    327\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcol: Optional[Collection] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m    329\u001b[0m \u001b[38;5;66;03m# Grab the existing collection if it exists\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\program files\\python38\\lib\\site-packages\\langchain_milvus\\vectorstores\\milvus.py:405\u001b[0m, in \u001b[0;36mMilvus._create_connection_alias\u001b[1;34m(self, connection_args)\u001b[0m\n\u001b[0;32m    403\u001b[0m alias \u001b[38;5;241m=\u001b[39m uuid4()\u001b[38;5;241m.\u001b[39mhex\n\u001b[0;32m    404\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 405\u001b[0m     \u001b[43mconnections\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconnect\u001b[49m\u001b[43m(\u001b[49m\u001b[43malias\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43malias\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mconnection_args\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    406\u001b[0m     logger\u001b[38;5;241m.\u001b[39mdebug(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCreated new connection using: \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m\"\u001b[39m, alias)\n\u001b[0;32m    407\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m alias\n",
+      "File \u001b[1;32mc:\\program files\\python38\\lib\\site-packages\\pymilvus\\orm\\connections.py:379\u001b[0m, in \u001b[0;36mConnections.connect\u001b[1;34m(self, alias, user, password, db_name, token, **kwargs)\u001b[0m\n\u001b[0;32m    374\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m parent_path\u001b[38;5;241m.\u001b[39mis_dir():\n\u001b[0;32m    375\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m ConnectionConfigException(\n\u001b[0;32m    376\u001b[0m         message\u001b[38;5;241m=\u001b[39m\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOpen local milvus failed, dir: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mparent_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is not exists\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    377\u001b[0m     )\n\u001b[1;32m--> 379\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmilvus_lite\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mserver_manager\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m server_manager_instance\n\u001b[0;32m    381\u001b[0m logger\u001b[38;5;241m.\u001b[39minfo(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPass in the local path \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkwargs[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124muri\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, and run it using milvus-lite\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    382\u001b[0m local_uri \u001b[38;5;241m=\u001b[39m server_manager_instance\u001b[38;5;241m.\u001b[39mstart_and_get_uri(kwargs[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124muri\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'milvus_lite'"
+     ]
+    }
+   ],
+   "source": [
+    "def query_rag(query):\n",
+    "    \"\"\"\n",
+    "    Entry point for the RAG model to generate an answer to a given query\n",
+    "\n",
+    "    This function initializes the RAG model, sets up the necessary components such as the prompt template, vector store, \n",
+    "    retriever, document chain, and retrieval chain, and then generates a response to the provided query.\n",
+    "\n",
+    "    Args:\n",
+    "        query (str): The query string for which an answer is to be generated.\n",
+    "    \n",
+    "    Returns:\n",
+    "        str: The answer to the query\n",
+    "    \"\"\"\n",
+    "    # Define the model\n",
+    "    model = ChatMistralAI(model='open-mistral-7b')\n",
+    "    print(\"Model Loaded\")\n",
+    "\n",
+    "    prompt = create_prompt()\n",
+    "\n",
+    "    # Load the vector store and create the retriever\n",
+    "    vector_store = load_existing_db(uri=MILVUS_URI)\n",
+    "    retriever = vector_store.as_retriever()\n",
+    "    try:\n",
+    "        document_chain = create_stuff_documents_chain(model, prompt)\n",
+    "        print(\"Document Chain Created\")\n",
+    "\n",
+    "        retrieval_chain = create_retrieval_chain(retriever, document_chain)\n",
+    "        print(\"Retrieval Chain Created\")\n",
+    "    \n",
+    "        # Generate a response to the query\n",
+    "        response = retrieval_chain.invoke({\"input\": f\"{query}\"})\n",
+    "    except HTTPStatusError as e:\n",
+    "        print(f\"HTTPStatusError: {e}\")\n",
+    "        if e.response.status_code == 429:\n",
+    "            return \"I am currently experiencing high traffic. Please try again later.\", []\n",
+    "        return \"I am unable to answer this question at the moment. Please try again later.\", []\n",
+    "    \n",
+    "    # logic to add sources to the response\n",
+    "    max_relevant_sources = 4 # number of sources at most to be added to the response\n",
+    "    all_sources = \"\"\n",
+    "    sources = []\n",
+    "    count = 1\n",
+    "    for i in range(max_relevant_sources):\n",
+    "        try:\n",
+    "            source = response[\"context\"][i].metadata[\"source\"]\n",
+    "            # check if the source is already added to the list\n",
+    "            if source not in sources:\n",
+    "                sources.append(source)\n",
+    "                all_sources += f\"[Source {count}]({source}), \"\n",
+    "                count += 1\n",
+    "        except IndexError: # if there are no more sources to add\n",
+    "            break\n",
+    "    all_sources = all_sources[:-2] # remove the last comma and space\n",
+    "    response[\"answer\"] += f\"\\n\\nSources: {all_sources}\"\n",
+    "    print(\"------------------------------------------------------------------------\")\n",
+    "    print(\"Response Generated:\")\n",
+    "    \n",
+    "    return response[\"answer\"], sources\n",
+    "\n",
+    "response, sources = query_rag(\"how to connect wifi\")\n",
+    "print(response)\n",
+    "print(sources)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
