Removed duplicate sources and added document note for all the blocks

--- a/documentation.ipynb
+++ b/documentation.ipynb
@@ -83,6 +83,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# API keys for Cohere and Mistral AI models\n",
+    "# Path to the Milvus database URI for storing vector embeddings\n",
+    "# The name of the transformer model to use for generating embeddings\n",
+    "# Extract the directory path from the URI and create it if it doesn't exist\n",
+    "# Establish a connection to the Milvus database\n",
+    "# Initialize the embedding function with the transformer model\n",
+    "# Initialize a RecursiveUrlLoader to load web documents while preventing \n",
+    "# navigation outside the specified base URL\n",
+    "# Initialize a vector store with the specified collection name, embedding function, and connection settings\n",
+    "# Create a text splitter to divide the documents into chunks of specified size with overlap\n",
+    "# Create a vector store from the documents, dropping any existing collection with the same name"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 80,
    "metadata": {},
    "outputs": [
@@ -204,6 +223,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize a connection to the Milvus database with the specified collection name.\n",
+    "# \"IT_support\" is the collection that stores embeddings related to IT support queries.\n",
+    "# The `embedding_function` is a callable function that converts text to embeddings, \n",
+    "# ensuring the retrieved data is in the same vector format as expected for querying."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 81,
    "metadata": {},
    "outputs": [
@@ -251,6 +282,20 @@
     "    return vector_store\n",
     "\n",
     "initialize_milvus()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the template for the prompt. This template provides the format and guidelines the AI assistant \n",
+    "# should follow when generating responses to user questions. The assistant is instructed to use only \n",
+    "# the information within the <context> tags, keeping answers fact-based and concise.\n",
+    "# Create an instance of PromptTemplate using the defined template. This instance enables the AI assistant \n",
+    "# to format responses according to the structure defined in PROMPT_TEMPLATE. The prompt accepts two input \n",
+    "# variables, 'context' and 'question', which are dynamically filled in when the prompt is used in a query."
    ]
   },
   {
@@ -303,6 +348,30 @@
     "    return prompt\n",
     "\n",
     "print(create_prompt())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This function sets up and runs a RAG model pipeline, integrating the following components:\n",
+    "\n",
+    "#     Model Initialization: Loads the ChatMistralAI model, which serves as the foundation for generating answers.\n",
+    "#     Prompt Creation: Creates a prompt template for the model.\n",
+    "#     Vector Store Loading: Loads the Milvus vector store to retrieve relevant document data.\n",
+    "#     Retriever Setup: Configures a retriever to find and return relevant documents from the vector store.\n",
+    "#     Document Chain and Retrieval Chain Creation: Sets up the chains that guide the RAG model through document processing and response generation.\n",
+    "# Workflow\n",
+    "#     Generate Response: The RAG model is invoked with the user query, generating an answer by leveraging the relevant documents.\n",
+    "#     Error Handling: Handles any HTTP errors, including rate limits, by returning appropriate messages.\n",
+    "#     Source Aggregation: Gathers and lists up to 4 unique sources relevant to the response, adding them as citations.\n",
+    "#     Response Return: The function returns the generated response, enriched with cited sources.\n",
+    "#     Arguments\n",
+    "#         query (str): The input query string from the user.\n",
+    "#     Returns\n",
+    "#         str: The generated answer to the query, including sources if available."
    ]
   },
   {
@@ -393,11 +462,10 @@
     "    print(\"------------------------------------------------------------------------\")\n",
     "    print(\"Response Generated:\")\n",
     "    \n",
-    "    return response[\"answer\"], sources\n",
+    "    return response[\"answer\"]\n",
     "\n",
-    "response, sources = query_rag(\"how to connect wifi\")\n",
-    "print(response)\n",
-    "print(sources)"
+    "response = query_rag(\"how to connect wifi\")\n",
+    "print(response)"
    ]
   },
   {
