Corpus source added for RecursiveUrlLoader

--- a/documentation.ipynb
+++ b/documentation.ipynb
@@ -114,6 +114,7 @@
     }
    ],
    "source": [
+    "CORPUS_SOURCE = 'https://www.csusb.edu/its'\n",
     "COHERE_API_KEY='JPZrN72mRP2r9W5Dedo3Zk18VUS8voCHIPD7WLly'\n",
     "MISTRAL_API_KEY='aCp49AkZAXNhTUgFziRT3Q8uO0GgWjBj'\n",
     "MILVUS_URI = \"milvus/milvus_vector.db\"\n",
