Separate Jupyter Database file added.

--- a/documentation.ipynb
+++ b/documentation.ipynb
@@ -117,7 +117,7 @@
     "CORPUS_SOURCE = 'https://www.csusb.edu/its'\n",
     "COHERE_API_KEY='JPZrN72mRP2r9W5Dedo3Zk18VUS8voCHIPD7WLly'\n",
     "MISTRAL_API_KEY='aCp49AkZAXNhTUgFziRT3Q8uO0GgWjBj'\n",
-    "MILVUS_URI = \"milvus/milvus_vector.db\"\n",
+    "MILVUS_URI = \"milvus/jupyter_milvus_vector.db\"\n",
     "MODEL_NAME = \"sentence-transformers/all-MiniLM-L6-v2\"\n",
     "\n",
     "def vector_store_check(uri):\n",
@@ -252,9 +252,46 @@
     "    \"\"\"\n",
     "    if vector_store_check(uri):\n",
     "        vector_store = load_existing_db(uri)\n",
+    "        print(\"Embeddings loaded from existing Database\")\n",
     "    else:\n",
     "        embeddings = get_embedding_function()\n",
     "        print(\"Embeddings Loaded\")\n",
+    "        documents = load_documents_from_web()\n",
+    "        print(\"Documents Loaded\")\n",
+    "        print(len(documents))\n",
+    "    \n",
+    "        # Split the documents into chunks\n",
+    "        docs = split_documents(documents=documents)\n",
+    "        print(\"Documents Splitting completed\")\n",
+    "    \n",
+    "        vector_store = create_vector_store(docs, embeddings, uri)\n",
+    "\n",
+    "    return vector_store\n",
+    "\n",
+    "initialize_milvus()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dings Loaded\")\n",
     "        documents = load_documents_from_web()\n",
     "        print(\"Documents Loaded\")\n",
     "        print(len(documents))\n",
